fix f2f and introducing on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -630,8 +630,9 @@ div.clients-page-header {
     color: #fff;
     /* Misc */
     @media screen and (max-width: 540px) {
-      background-position: center;
+      background-position: 60% center;
       background-size: cover;
+
 
 
     }
@@ -1110,7 +1111,7 @@ div.introducing-beauty-strip {
   color: #fff;
   /* Misc */
   @media screen and (max-width: 540px) {
-    background-position: center;
+    background-position: 55% center;
     background-size: cover;
   }
   h2 {
